--- a/api_gateway/requirements.txt
+++ b/api_gateway/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==4.2
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 idna==3.10
 psycopg2-binary==2.9.10
