--- a/api_gateway/requirements.txt
+++ b/api_gateway/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==3.13.0
 djangorestframework==3.14.0
 idna==3.10
 psycopg2-binary==2.9.10
+PyJWT==2.9.0
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.31.0
